unpackaged/main/default/objects/Store_Member__c/Store_Member__c.object-meta.xml
<CustomObject>
    <description>Junction between user (team members) and store.</description>
    <label>Store Member</label>
    <nameField>
        <displayFormat>US-{0000}</displayFormat>
        <label>Store Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>