unpackaged/main/default/objects/Store_Member__c/fields/Call_Volume__c.field-meta.xml
<CustomField>
    <fullName>Call_Volume__c</fullName>
    <label>Call Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>