unpackaged/main/default/objects/Store_Member__c/fields/Default_Trade_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Default_Trade_Specialist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the trade specialist is default or not</description>
    <label>Default Trade Specialist</label>
    <type>Checkbox</type>
</CustomField>