unpackaged/main/default/objects/Store_Member__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End date of association with the store</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>