unpackaged/main/default/objects/Store_Member__c/fields/Location_Code__c.field-meta.xml
<CustomField>
    <fullName>Location_Code__c</fullName>
    <formula>Store__r.Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Code</label>
    <type>Text</type>
</CustomField>