unpackaged/main/default/objects/Store_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASM</fullName>
            </value>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Area BDM</fullName>
            </value>
            <value>
                <fullName>CCS Manager</fullName>
            </value>
            <value>
                <fullName>RCM</fullName>
            </value>
            <value>
                <fullName>Trade Specialist</fullName>
            </value>
            <value>
                <fullName>SSM</fullName>
            </value>
            <value>
                <fullName>CCS</fullName>
                <isActive>false</isActive>
                <label>CCS</label>
            </value>
            <value>
                <fullName>Team Member</fullName>
                <isActive>false</isActive>
                <label>Team Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>