unpackaged/main/default/objects/Store_Member__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start date of association with the store</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>