unpackaged/main/default/objects/Store_Member__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipName>User_Stores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>