unpackaged/main/default/objects/Store_Member__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>User_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>