unpackaged/main/default/objects/Store_Member__c/validationRules/AM_Team_Member_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>AM_Team_Member_Profiles</fullName>
    <active>true</active>
    <description>AM - can only be assigned to profiles: Account Manager, NZ Account Manager</description>
    <errorConditionFormula>ISPICKVAL(Role__c, &#39;Account Manager&#39;) &amp;&amp; !CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.AM_Profiles__c,  Team_Member__r.Profile.Name)</errorConditionFormula>
    <errorMessage>Role AM can only be assigned to users of profiles: Account Manager, NZ Account Manager</errorMessage>
</ValidationRule>