unpackaged/main/default/objects/Store_Member__c/validationRules/Area_BDM_Team_Member_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>Area_BDM_Team_Member_Profiles</fullName>
    <active>true</active>
    <description>Area BDM - can be assigned to profiles: Organisations Sales Manager</description>
    <errorConditionFormula>ISPICKVAL(Role__c, &#39;Area BDM&#39;) &amp;&amp; ($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Area_BDM_Profiles__c !=  Team_Member__r.Profile.Name)</errorConditionFormula>
    <errorMessage>Role Area BDM can only be assigned to users of profiles: Organisations Sales Manager</errorMessage>
</ValidationRule>