unpackaged/main/default/objects/Store_Member__c/validationRules/ASM_Team_Member_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>ASM_Team_Member_Profiles</fullName>
    <active>true</active>
    <description>ASM - can only be assigned to profiles: Sales Manager, NZ Sales Manager</description>
    <errorConditionFormula>ISPICKVAL(Role__c, &#39;ASM&#39;) &amp;&amp; !CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.ASM_Profiles__c,  Team_Member__r.Profile.Name)</errorConditionFormula>
    <errorMessage>Role ASM can only be assigned to users of profiles: Sales Manager, NZ Sales Manager</errorMessage>
</ValidationRule>