unpackaged/main/default/objects/Store_Member__c/validationRules/CCS_Manager_Team_Member_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>CCS_Manager_Team_Member_Profiles</fullName>
    <active>true</active>
    <description>CCS Manager - can be assigned to profiles: Sales Person Contact Centre, National Manager</description>
    <errorConditionFormula>ISPICKVAL(Role__c, &#39;CCS Manager&#39;) &amp;&amp; !CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.CCS_Manager_Profiles__c,  Team_Member__r.Profile.Name)</errorConditionFormula>
    <errorMessage>Role CCS Manager can only be assigned to users of profiles: Sales Person Contact Centre, National Manager</errorMessage>
</ValidationRule>