unpackaged/main/default/objects/Store_Member__c/validationRules/Default_Trade_Specialist_Role_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Trade_Specialist_Role_Mismatch</fullName>
    <active>true</active>
    <description>Default Trade Specialist can only be checked when the Role is Trade Specialist</description>
    <errorConditionFormula>AND(
 Default_Trade_Specialist__c = true,
 !ISPICKVAL( Role__c , &#39;Trade Specialist&#39;) 
)</errorConditionFormula>
    <errorMessage>Default Trade Specialist can only be checked when the Role is Trade Specialist</errorMessage>
</ValidationRule>