unpackaged/main/default/objects/Store_Member__c/validationRules/Trade_Specialist_Team_Member_Profiles.validationRule-meta.xml
<ValidationRule>
    <fullName>Trade_Specialist_Team_Member_Profiles</fullName>
    <active>true</active>
    <description>Trade Specialist - can only be assigned to profiles: Trade Specialist, NZ Trade Specialist</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(Role__c, &#39;Trade Specialist&#39;) &amp;&amp; !CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Trade_Specialist_Profiles__c,  Team_Member__r.Profile.Name)</errorConditionFormula>
    <errorMessage>Role Trade Specialist can only be assigned to users of profiles: Trade Specialist, NZ Trade Specialist</errorMessage>
</ValidationRule>