unpackaged/main/default/objects/Store_Member__c/validationRules/Validation_on_TradeSpecialist_Role.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_TradeSpecialist_Role</fullName>
    <active>true</active>
    <description>This validation rule ensures that only the Integration User can select the Role &quot;Trade Specialist&quot;.</description>
    <errorConditionFormula>(ISNEW()&amp;&amp;
TEXT(Role__c) = &quot;Trade Specialist&quot;)&amp;&amp;
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name))||
(ISCHANGED(Role__c)&amp;&amp;
TEXT(Role__c) = &quot;Trade Specialist&quot;&amp;&amp;
NOT(CONTAINS($CustomMetadata.Initialisation__mdt.CCRM_Initialisation.Admin_Validation_Exceptions__c, $Profile.Name)))</errorConditionFormula>
    <errorDisplayField>Role__c</errorDisplayField>
    <errorMessage>This value can only be set via Integration. Please select another.</errorMessage>
</ValidationRule>